Fixed vertical alignment of top part

--- a/css/style2.css
+++ b/css/style2.css
@@ -35,11 +35,14 @@ body {
     background-position: center;
     background-size: cover;
     height: 100px;
+    width: 100%;
+    display: table;
 }
 
 #title {
-    position: relative;
-    margin: 0 auto;
+    display: table-cell;
+    padding-bottom: 15px;
+    vertical-align: middle;
     color: white;
     text-align: center;
 }
@@ -73,8 +76,6 @@ h1 {
     font-weight: 900;
     color: #ffffff;
     text-align: center;
-    margin-bottom: 10px;
-    margin-top: 20px;
     display: inline-block;
 }
 
